Updated website and made the ui mobile-friendly

--- a/contents/pages/sozluk.mdx
+++ b/contents/pages/sozluk.mdx
@@ -84,7 +84,7 @@ Kondominium; birden fazla devletin, bir toprağı veya bölgeyi kendilerine ait 
 
 Güdük devlet, önceden daha büyük bir devletin bölünme, ilhak, işgal, dekolonizasyon, darbe veya devrim gibi sebeplerden ötürü bölünmesinden sonra kalan ve toprak bakımından daha küçük olan kalıntısıdır.
 
-import ContentSources from "@/components/content-partials/content-sources";
+import { ContentSources } from "@/components/mdx-partials/content-sources";
 
 <ContentSources
   sources={[
