--- a/contents/topics/koloniyalizm/afrikada-kolonicilik/example.mdx
+++ b/contents/topics/koloniyalizm/afrikada-kolonicilik/example.mdx
@@ -1,6 +1,6 @@
 # Example
 
-import ContentSubheader from "@/components/content-partials/content-subheader";
+import { ContentSubheader } from "@/components/mdx-partials/content-subheader";
 
 <ContentSubheader
   breadcrumbs={["Koloniyalizm", "Afrika'da Kolonicilik", "Example"]}
